--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -25,7 +25,7 @@ info:
   license:
     name: Apache-2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-  version: 2.4.0
+  version: 2.5.0
 externalDocs:
   description: Find more info here
   url: 'http://developer.okta.com/docs/api/getting_started/design_principles.html'
@@ -2060,6 +2060,142 @@ paths:
         - api_token: []
       tags:
         - AuthorizationServer
+  /api/v1/domains:
+    get:
+      consumes:
+        - application/json
+      description: List all verified custom Domains for the org.
+      operationId: listDomains
+      parameters: []
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            items:
+              $ref: '#/definitions/Domain'
+            type: array
+      security:
+        - api_token: []
+      summary: List Domains
+      tags:
+        - Domain
+    post:
+      consumes:
+        - application/json
+      description: Creates your domain.
+      operationId: createDomain
+      parameters:
+        - in: body
+          name: domain
+          required: true
+          schema:
+            $ref: '#/definitions/Domain'
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            $ref: '#/definitions/Domain'
+      security:
+        - api_token: []
+      summary: Create Domain
+      tags:
+        - Domain
+  '/api/v1/domains/{domainId}':
+    delete:
+      consumes:
+        - application/json
+      description: Deletes a Domain by `id`.
+      operationId: deleteDomain
+      parameters:
+        - in: path
+          name: domainId
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '204':
+          description: No Content
+      security:
+        - api_token: []
+      summary: Delete Domain
+      tags:
+        - Domain
+    get:
+      consumes:
+        - application/json
+      description: Fetches a Domain by `id`.
+      operationId: getDomain
+      parameters:
+        - in: path
+          name: domainId
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            $ref: '#/definitions/Domain'
+      security:
+        - api_token: []
+      summary: Get Domain
+      tags:
+        - Domain
+  '/api/v1/domains/{domainId}/certificate':
+    put:
+      consumes:
+        - application/json
+      description: Creates the Certificate for the Domain.
+      operationId: createCertificate
+      parameters:
+        - in: path
+          name: domainId
+          required: true
+          type: string
+        - in: body
+          name: certificate
+          required: true
+          schema:
+            $ref: '#/definitions/DomainCertificate'
+      produces:
+        - application/json
+      responses:
+        '204':
+          description: No Content
+      security:
+        - api_token: []
+      summary: Create Certificate
+      tags:
+        - Domain
+  '/api/v1/domains/{domainId}/verify':
+    post:
+      consumes:
+        - application/json
+      description: Verifies the Domain by `id`.
+      operationId: verifyDomain
+      parameters:
+        - in: path
+          name: domainId
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            $ref: '#/definitions/Domain'
+      security:
+        - api_token: []
+      summary: Verify Domain
+      tags:
+        - Domain
   /api/v1/eventHooks:
     get:
       consumes:
@@ -2501,6 +2637,12 @@ paths:
           name: ruleId
           required: true
           type: string
+        - description: >-
+            Indicates whether to keep or remove users from groups assigned by
+            this rule.
+          in: query
+          name: removeUsers
+          type: boolean
       produces:
         - application/json
       responses:
@@ -8586,6 +8728,27 @@ definitions:
         type: string
     x-okta-tags:
       - UserFactor
+  DNSRecord:
+    properties:
+      expiration:
+        type: string
+      fqdn:
+        type: string
+      recordType:
+        $ref: '#/definitions/DNSRecordType'
+      values:
+        items:
+          type: string
+        type: array
+    x-okta-tags:
+      - Domain
+  DNSRecordType:
+    enum:
+      - TXT
+      - CNAME
+    type: string
+    x-okta-tags:
+      - Domain
   DevicePolicyRuleCondition:
     properties:
       migrated:
@@ -8624,6 +8787,75 @@ definitions:
     type: object
     x-okta-tags:
       - Policy
+  Domain:
+    properties:
+      certificateSourceType:
+        $ref: '#/definitions/DomainCertificateSourceType'
+      dnsRecords:
+        items:
+          $ref: '#/definitions/DNSRecord'
+        type: array
+      domain:
+        type: string
+      id:
+        readOnly: true
+        type: string
+      publicCertificate:
+        $ref: '#/definitions/DomainCertificateMetadata'
+      validationStatus:
+        $ref: '#/definitions/DomainValidationStatus'
+    type: object
+    x-okta-tags:
+      - Domain
+  DomainCertificate:
+    properties:
+      certificate:
+        type: string
+      certificateChain:
+        type: string
+      privateKey:
+        type: string
+      type:
+        $ref: '#/definitions/DomainCertificateType'
+    x-okta-operations:
+      - alias: createCertificate
+        arguments:
+          - dest: certificate
+            self: true
+        operationId: createCertificate
+    x-okta-tags:
+      - Domain
+  DomainCertificateMetadata:
+    properties:
+      expiration:
+        type: string
+      fingerprint:
+        type: string
+      subject:
+        type: string
+    x-okta-tags:
+      - Domain
+  DomainCertificateSourceType:
+    enum:
+      - MANUAL
+    type: string
+    x-okta-tags:
+      - Domain
+  DomainCertificateType:
+    enum:
+      - PEM
+    type: string
+    x-okta-tags:
+      - Domain
+  DomainValidationStatus:
+    enum:
+      - NOT_STARTED
+      - IN_PROGRESS
+      - VERIFIED
+      - COMPLETED
+    type: string
+    x-okta-tags:
+      - Domain
   Duration:
     properties:
       number:
@@ -10766,6 +10998,8 @@ definitions:
           $ref: '#/definitions/OAuthResponseType'
         type: array
       tos_uri:
+        type: string
+      wildcard_redirect:
         type: string
     x-okta-tags:
       - Application
@@ -13206,10 +13440,8 @@ definitions:
         readOnly: true
         type: string
       properties:
-        additionalProperties:
-          type: object
+        $ref: '#/definitions/UserSchemaProperties'
         readOnly: true
-        type: object
       title:
         type: string
       type:
@@ -13222,6 +13454,16 @@ definitions:
     properties:
       description:
         type: string
+      enum:
+        items:
+          type: string
+        type: array
+      externalName:
+        type: string
+      externalNamespace:
+        type: string
+      items:
+        $ref: '#/definitions/UserSchemaAttributeItems'
       master:
         $ref: '#/definitions/UserSchemaAttributeMaster'
       maxLength:
@@ -13230,6 +13472,12 @@ definitions:
         type: integer
       mutability:
         type: string
+      oneOf:
+        items:
+          $ref: '#/definitions/UserSchemaAttributeEnum'
+        type: array
+      pattern:
+        type: string
       permissions:
         items:
           $ref: '#/definitions/UserSchemaAttributePermission'
@@ -13237,9 +13485,37 @@ definitions:
       required:
         type: boolean
       scope:
+        $ref: '#/definitions/UserSchemaAttributeScope'
+      title:
+        type: string
+      type:
+        $ref: '#/definitions/UserSchemaAttributeType'
+      union:
+        $ref: '#/definitions/UserSchemaAttributeUnion'
+      unique:
+        type: string
+    type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaAttributeEnum:
+    properties:
+      const:
         type: string
       title:
         type: string
+    type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaAttributeItems:
+    properties:
+      enum:
+        items:
+          type: string
+        type: array
+      oneOf:
+        items:
+          $ref: '#/definitions/UserSchemaAttributeEnum'
+        type: array
       type:
         type: string
     type: object
@@ -13247,9 +13523,30 @@ definitions:
       - UserSchema
   UserSchemaAttributeMaster:
     properties:
+      priority:
+        items:
+          $ref: '#/definitions/UserSchemaAttributeMasterPriority'
+        type: array
+      type:
+        $ref: '#/definitions/UserSchemaAttributeMasterType'
+    type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaAttributeMasterPriority:
+    properties:
       type:
         type: string
+      valuse:
+        type: string
     type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaAttributeMasterType:
+    enum:
+      - PROFILE_MASTER
+      - OKTA
+      - OVERRIDE
+    type: string
     x-okta-tags:
       - UserSchema
   UserSchemaAttributePermission:
@@ -13258,6 +13555,30 @@ definitions:
         type: string
       principal:
         type: string
+    type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaAttributeScope:
+    enum:
+      - SELF
+      - NONE
+    type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaAttributeType:
+    enum:
+      - string
+      - boolean
+      - number
+      - integer
+      - array
+    type: string
+    x-okta-tags:
+      - UserSchema
+  UserSchemaAttributeUnion:
+    enum:
+      - DISABLE
+      - ENABLE
     type: object
     x-okta-tags:
       - UserSchema
@@ -13353,6 +13674,29 @@ definitions:
     type: object
     x-okta-tags:
       - UserSchema
+  UserSchemaProperties:
+    properties:
+      profile:
+        $ref: '#/definitions/UserSchemaPropertiesProfile'
+    type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaPropertiesProfile:
+    properties:
+      allOf:
+        items:
+          $ref: '#/definitions/UserSchemaPropertiesProfileItem'
+        type: array
+    type: object
+    x-okta-tags:
+      - UserSchema
+  UserSchemaPropertiesProfileItem:
+    properties:
+      $ref:
+        type: string
+    type: object
+    x-okta-tags:
+      - UserSchema
   UserSchemaPublic:
     properties:
       id:
@@ -13360,7 +13704,7 @@ definitions:
         type: string
       properties:
         additionalProperties:
-          type: object
+          $ref: '#/definitions/UserSchemaAttribute'
         type: object
       required:
         items:
