--- a/api/pom.xml
+++ b/api/pom.xml
@@ -37,6 +37,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <swagger-annotations.version>1.6.6</swagger-annotations.version>
         <spring-web.version>5.3.20</spring-web.version>
+        <spring-retry.version>1.3.3</spring-retry.version>
         <jackson-databind-nullable.version>0.2.2</jackson-databind-nullable.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
         <jsr305.version>3.0.2</jsr305.version>
@@ -86,6 +87,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring-web.version}</version>
+        </dependency>
+
+        <!-- Spring Retry -->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>${spring-retry.version}</version>
         </dependency>
 
         <!-- JSON processing: Jackson -->
