--- a/api/pom.xml
+++ b/api/pom.xml
@@ -160,7 +160,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>6.0.1-SNAPSHOT</version>
+                <version>6.0.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -171,18 +171,12 @@
                             <generatorName>java</generatorName>
                             <configOptions>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
-<!--                                <additional-properties>-->
-<!--                                    disallowAdditionalPropertiesIfNotPresent=false-->
-<!--                                </additional-properties>-->
                             </configOptions>
                             <skipValidateSpec>true</skipValidateSpec>
                             <generateModelTests>false</generateModelTests>
                             <generateApiTests>false</generateApiTests>
                             <templateDirectory>src/main/resources/custom_templates</templateDirectory>
                             <library>resttemplate</library>
-                            <additionalProperties>
-                                <additionalProperty>disallowAdditionalPropertiesIfNotPresent=false</additionalProperty>
-                            </additionalProperties>
                         </configuration>
                     </execution>
                 </executions>
