--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <snakeyaml.version>2.0</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.5</jjwt.version>
+        <org.apache.httpcomponents.client5.version>5.2.1</org.apache.httpcomponents.client5.version>
         <okta.sdk.previousVersion>10.3.0</okta.sdk.previousVersion>
         <okta.commons.version>1.3.3</okta.commons.version>
         <github.slug>okta/okta-sdk-java</github.slug>
@@ -125,7 +126,7 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.2.11</version>
+                <version>1.3.4</version>
             </dependency>
 
             <!-- Bouncy Castle -->
@@ -163,7 +164,7 @@
             <dependency>
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
-                <version>5.2.1</version>
+                <version>${org.apache.httpcomponents.client5.version}</version>
             </dependency>
 
             <dependency>
