Add resource-set and role attributes to Role model

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -29773,6 +29773,10 @@ components:
           readOnly: true
         status:
           $ref: '#/components/schemas/LifecycleStatus'
+        resource-set:
+          type: string
+        role:
+          type: string
         type:
           $ref: '#/components/schemas/RoleType'
         _embedded:
