--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
-                <artifactId>okta-sdk-examples-quickstart</artifactId>
+                <artifactId>okta-sdk-examples</artifactId>
                 <version>17.0.0-SNAPSHOT</version>
             </dependency>
 
