OASv3 spec - UserSchemaAttributes minLength and maxLength must be nullable

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -31373,8 +31373,10 @@ components:
           $ref: '#/components/schemas/UserSchemaAttributeMaster'
         maxLength:
           type: integer
+          nullable: true
         minLength:
           type: integer
+          nullable: true
         mutability:
           type: string
         oneOf:
