--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>17.0.0</version>
+        <version>17.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>okta-sdk-examples</artifactId>
